<resources>
    <string name="app_name">TodoManageHomework</string>

    <!-- Appbar 액션 메뉴 -->
    <string name="todo_sort_option_month">월간</string>
    <string name="todo_sort_option_week">주간</string>
    <string name="todo_sort_option_day">일간</string>

    <!-- 상세일정 화면 -->
    <string name="todo_detail">상세 일정</string>
    <string name="todo_detail_title">제목</string>
    <string name="todo_detail_title_hint">제목을 입력해주세요</string>
    <string name="todo_detail_date">날짜</string>
    <string name="todo_detail_start_time">시작 시간</string>
    <string name="todo_detail_end_time">종료 시간</string>
    <string name="todo_detail_place">장소</string>
    <string name="todo_detail_place_hint">장소를 입력해주세요</string>
    <string name="todo_detail_place_search">검색</string>
    <string name="todo_detail_memo">메모</string>
    <string name="todo_detail_multimedia_memo">이미지 / 오디오 / 비디오</string>
    <string name="todo_detail_multimedia_memo_add">추가</string>
    <string name="todo_detail_multimedia_memo_replace">변경</string>
    <string name="title_activity_maps">Map</string>

    <!-- 새로운 상세일정 저장 중 안내 메세지 -->
    <string name="todo_detail_save_fail_title_empty">제목을 입력해주세요.</string>
    <string name="todo_detail_save_fail_date_is_before_than_current">현재 날짜를 포함한 이후 날짜를 선택해주세요.</string>
    <string name="todo_detail_save_fail_start_time_is_after_than_end_time">시작 시간을 종료 시간 이전으로 선택해주세요.</string>
    <string name="todo_detail_save_fail_not_selected_place">장소를 선택해주세요.</string>
    <string name="todo_detail_save_fail_memo_content_empty">메모 내용을 입력해주세요.</string>
    <string name="todo_detail_save_success">메모가 저장되었습니다.</string>
</resources>