<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/todo_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        tools:context=".view.TodoDetailActivity">

        <TextView
            android:id="@+id/todo_detail_title_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/todo_detail_title"
            android:textSize="14sp"
            />

        <EditText
            android:id="@+id/todo_detail_title_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:imeOptions="actionDone"
            android:hint="@string/todo_detail_title_hint"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_title_title"
            />

        <TextView
            android:id="@+id/todo_detail_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/todo_detail_date"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_title_content"
            />

        <DatePicker
            android:id="@+id/todo_detail_date_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_date_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/todo_detail_start_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_start_time"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_date_content"
            />

        <TimePicker
            android:id="@+id/todo_detail_start_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_start_time_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/todo_detail_end_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_end_time"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_start_time_picker"
            />

        <TimePicker
            android:id="@+id/todo_detail_end_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_end_time_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/todo_detail_place_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/todo_detail_place"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_end_time_picker"
            />

        <EditText
            android:id="@+id/todo_detail_place_input_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:imeOptions="actionDone"
            android:hint="@string/todo_detail_place_hint"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_place_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/todo_detail_place_search_btn"
            app:layout_constraintHorizontal_weight="0.7"
            />

        <Button
            android:id="@+id/todo_detail_place_search_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_place_search"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_place_title"
            app:layout_constraintStart_toEndOf="@id/todo_detail_place_input_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.3"
            />

        <fragment
            android:id="@+id/todo_detail_place_map"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_place_input_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:context=".view.TodoDetailActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

        <TextView
            android:id="@+id/todo_detail_memo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/todo_detail_memo"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_place_map"
            />

        <EditText
            android:id="@+id/todo_detail_memo_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:minHeight="160dp"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_memo_title"
            tools:text="dsafesafasefaesfasefasefasef"
            />

        <TextView
            android:id="@+id/todo_detail_multimedia_memo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/todo_detail_multimedia_memo"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_memo_content"
            />

        <Button
            android:id="@+id/todo_detail_multimedia_memo_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_multimedia_memo_title"
            tools:text="@string/todo_detail_multimedia_memo_add"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/todo_detail_multimedia_data_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/todo_detail_multimedia_memo_add_btn">

            <ImageView
                android:id="@+id/todo_detail_multimedia_data_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/todo_detail_multimedia_data_audio_play_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@drawable/ic_play_36dp"
                />

            <VideoView
                android:id="@+id/todo_detail_multimedia_data_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>